--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
 </head>
 
 <body class="bg-slate-900">
-    <section class="grid grid-cols-1 md:grid-cols-2 gap-2 m-12 ">
+    <section class="grid grid-cols-1 gap-2 m-12 md:grid-cols-2 ">
         <div><img src="images/money.png" alt="money"></div>
-        <div class="bg-slate-100 p-12">
-            <div class="mx-auto max-w-lg text-center mb-5">
-                <h1 class="text-2xl font-bold sm:text-3xl">Money Master!</h1>
+        <div class="p-12 bg-slate-100">
+            <div class="max-w-lg mx-auto mb-5 text-center">
+                <h1 class="text-2xl font-bold sm:text-3xl">Money Master</h1>
             </div>
             <div>
-                <input id="income" type="number" class="w-full mb-5 rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm" min="0" 
+                <input id="income" type="number" class="w-full p-4 pr-12 mb-5 text-sm border-gray-200 rounded-lg shadow-sm" min="0" 
                     placeholder="Your Income" />
-                <input type="number" id="food" class="w-full mb-5 rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm" min="0" 
+                <input type="number" id="food" class="w-full p-4 pr-12 mb-5 text-sm border-gray-200 rounded-lg shadow-sm" min="0" 
                     placeholder="Expense for Food" />
-                <input id="rent" type="number"  class="w-full mb-5 rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm" min="0"  
+                <input id="rent" type="number"  class="w-full p-4 pr-12 mb-5 text-sm border-gray-200 rounded-lg shadow-sm" min="0"  
                     placeholder="Expense for Rent" />
-                <input id="clothes" type="number"  class="w-full mb-5 rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm" min="0"  
+                <input id="clothes" type="number"  class="w-full p-4 pr-12 mb-5 text-sm border-gray-200 rounded-lg shadow-sm" min="0"  
                     placeholder="Expense for Clothes" />
                 <button id="calculate-button" type="submit" 
-                    class="w-full inline-block rounded-lg bg-blue-500 px-5 py-3 text-xl font-medium text-white">
+                    class="inline-block w-full px-5 py-3 text-xl font-medium text-white bg-blue-500 rounded-lg">
                     Calculate
                 </button>
                 <div class="grid grid-cols-2 gap-5">
-                    <p class="w-full my-5 rounded-lg border-gray-200 p-4 pr-12 text-md shadow-sm text-white bg-slate-900">Expenses: $
+                    <p class="w-full p-4 pr-12 my-5 text-white border-gray-200 rounded-lg shadow-sm text-md bg-slate-900">Expenses: $
                         <span id="expense"></span></p>
-                    <p class="w-full my-5 rounded-lg border-gray-200 p-4 pr-12 text-md shadow-sm text-white bg-slate-900">Balance: $
+                    <p class="w-full p-4 pr-12 my-5 text-white border-gray-200 rounded-lg shadow-sm text-md bg-slate-900">Balance: $
                         <span id="balance"></span></p>
                 </div>
                <div class="grid grid-cols-2 gap-5">
-                <input id="save" type="number" class="w-full mb-5 rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm" min="0"  placeholder="Want to Save Money??" />
-                <button id="save-button" type="submit" class="w-full inline-block rounded-lg  bg-yellow-500 text-xl text-white">
+                <input id="save" type="number" class="w-full p-4 pr-12 mb-5 text-sm border-gray-200 rounded-lg shadow-sm" min="0"  placeholder="Want to Save Money??" />
+                <button id="save-button" type="submit" class="inline-block w-full text-xl text-white bg-yellow-500 rounded-lg">
                     Save
                 </button>
                </div>
             <div class="grid grid-cols-2 gap-5">
-                <p class="w-full my-5 rounded-lg border-gray-200 p-4 pr-12 text-md shadow-sm text-white bg-slate-900">
+                <p class="w-full p-4 pr-12 my-5 text-white border-gray-200 rounded-lg shadow-sm text-md bg-slate-900">
                     Saving Amount:$
                     <span id="save-amount">0</span>
                 </p>
-                <p class="w-full my-5 rounded-lg border-gray-200 p-4 pr-12 text-md shadow-sm text-white bg-slate-900">Remaining Balance:$
+                <p class="w-full p-4 pr-12 my-5 text-white border-gray-200 rounded-lg shadow-sm text-md bg-slate-900">Remaining Balance:$
                     <span id="remaining-amount">0</span>
                 </p>
             </div>
