--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             </div>
         </div>
     </section>
-
+    <script src="script/common.js"></script>
+    <script src="script/money.js"></script>
 </body>
 
 </html>
